apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkmate-backend
  namespace: checkmate-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkmate-backend
  template:
    metadata:
      labels:
        app: checkmate-backend
    spec:
      containers:
        - name: checkmate-backend
          image: yny.ocir.io/ax1nm9kw34v6/checkmate:605719dcec6ee8774a73ab7dd87dadf158a3c01a
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ocir-secret
