apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkmate-backend-ingress
  namespace: checkmate-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.checkmate.it.kr
      secretName: checkmate-tls
  rules:
    - host: api.checkmate.it.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkmate-backend-svc
                port:
                  number: 80
